--- a/static/css/register.css
+++ b/static/css/register.css
@@ -3,57 +3,98 @@ a {
 }
 
 body {
+    background-color: #e0e0e0;
+    background-clip: padding-box;
     position: relative;
-    top: 20px;
+    top: 3em;
     display: block;
     text-align: center;
-    border: 3px solid #ccc;
-    width: 320px;
-    height: 400px;
     margin: auto;
-    
+    width: 40%;
+    height: 30em;
 }
 
+
 form {
-    display: inline-block;
+    padding-top: 10%;
+    display: block;
 }
 
 input,
 textarea,
-select {
+select,
+button {
     width: 160px;
     height: 10px;
     margin: auto;
     margin-bottom: 10px;
     padding: 10px;
-    border-radius: 5px;
-    border: 3px solid #ccc;
+    background-color: inherit;
+    border: unset;
+    border-bottom: 1px solid #555;
+    border-radius: 0px;
 }
 
-
-input[type=submit] {
-    width: 180px;
+button[type=submit] {
+    width: 20%;
+    height: 20px;
     height: fit-content;
-    background-color: #555;
+    background-color: #663366;
 }
 
-input[type=submit]:hover {
-    background-color: #777;
+button[type=submit]:hover {
+    background-color: #442344;
 }
 
+h1,
+h5 {
+    margin-top: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    color: #f5f5f5;
+}
 
-.box {
-    width: 120px;
-    height: 80px;
-    background-color: darkgoldenrod;
+.home {
+    font-size: larger;
+    font-weight: 600;
+    display: inline-flex;
+    position: relative;
+    top: 8.5em;
+}
+
+.topBox,
+.backBox {
+    width: 100%;
+    height: 8em;
+    background-color: #cc9900;
     background-clip: border-box;
     position: absolute;
-    top: 20px;
-    left: 20px;
-    color: white;
-    z-index:-1;
+    z-index: -1;
 }
 
-.box0 {
-    offset-position: normal;
-  }
+.backBox {
+    height: 100%;
+    background-color: #ededed;
+    z-index: -2;
+}
+
+.logoCircle {
+    display: inline-block;
+    height: 30px;
+    width: 30px;
+    background-color: #cc9900;
+    border: 3px solid #ededed;
+    border-radius: 50%;
+    position: relative;
+    top: 7em;
+    margin: auto;
+}
+
+.logo {
+    display: inline-block;
+    height: 30px;
+    width: 30px;
+    position: absolute;
+    top: 7.1em;
+    left: 47.8%;
+}
