--- a/static/css/register,login.css
+++ b/static/css/register,login.css
@@ -14,6 +14,24 @@ body {
     height: 30em;
 }
 
+.topBox,
+.backBox {
+    width: 100%;
+    min-height: 8em;
+    background-color: #cc9900;
+    background-clip: border-box;
+    position: absolute;
+    padding-top:0em;
+    display:flex;
+    justify-content: center;
+    z-index: -1;
+}
+
+.backBox {
+    height: 100%;
+    background-color: #ededed;
+    z-index: -2;
+}
 
 form {
     padding-top: 10%;
@@ -48,34 +66,21 @@ button[type=submit]:hover {
 
 h1,
 h5 {
-    margin-top: 0px;
-    padding-top: 0px;
+    position: relative;
+    top: 1em;
     padding-bottom: 0px;
     color: #f5f5f5;
+}
+
+.form{
+    padding-top: 5em;
 }
 
 .home {
     font-size: larger;
     font-weight: 600;
-    display: inline-flex;
     position: relative;
-    top: 8.5em;
-}
-
-.topBox,
-.backBox {
-    width: 100%;
-    height: 8em;
-    background-color: #cc9900;
-    background-clip: border-box;
-    position: absolute;
-    z-index: -1;
-}
-
-.backBox {
-    height: 100%;
-    background-color: #ededed;
-    z-index: -2;
+    top: 6em;
 }
 
 .logoCircle {
@@ -85,9 +90,9 @@ h5 {
     background-color: #cc9900;
     border: 3px solid #ededed;
     border-radius: 50%;
-    position: relative;
-    top: 7em;
-    margin: auto;
+    position:absolute;
+    bottom:-17px;
+    padding-bottom: 0;
 }
 
 .logo {
