--- a/templates/register.html
+++ b/templates/register.html
@@ -40,7 +40,7 @@
             </div>
         </form>
         <div class="home">
-            <img src="{{ url_for('static', filename='img/home.svg') }}" width="20" />
+            <img src="{{ url_for('static', filename='img/home.svg') }}" width="20" class="homeIcon"/>
             <a href="{{ url_for('home') }}">Home</a>
         </div>
     </a>
