--- a/static/css/register,login.css
+++ b/static/css/register,login.css
@@ -83,6 +83,11 @@ h5 {
     top: 6em;
 }
 
+.homeIcon {
+    position: relative;
+    top: 0.25em;
+}
+
 .logoCircle {
     display: inline-block;
     height: 30px;
