--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MedveBotch</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css')}}">
 </head>
 
 <body>
 
     <header>
-        <div class="logo">
+        <div class="title">
+            <div class="logo">
+                <img src="{{ url_for('static', filename='img/logo.png') }}" width="120" height="120" class="logo" />
+            </div>
             <h1>Medve-Botch</h1>
         </div>
         <nav>
