--- a/static/css/register,login.css
+++ b/static/css/register,login.css
@@ -79,11 +79,12 @@ h5 {
 .home {
     font-size: larger;
     font-weight: 600;
-    position: relative;
-    top: 6em;
+    position: absolute;
+    top: 92%;
+    left: 2%;
 }
 
-.homeIcon {
+.homeIcon{
     position: relative;
     top: 0.25em;
 }
