--- a/templates/index.html
+++ b/templates/index.html
@@ -15,13 +15,7 @@
 <body>
 
     <header>
-        <div class="title">
-            <div class="logo">
-                <img src="{{ url_for('static', filename='img/logo.png') }}" width="120" height="120" class="logo" />
-            </div>
-            <h1>Medve-Botch</h1>
-        </div>
-        <nav>
+        <nav class="perm-header">
             <ul>
                 <li><a href="{{ url_for('home') }}">Home</a></li>
                 {% if current_user.is_authenticated %}
@@ -35,6 +29,12 @@
                 <!DOCTYPE html>
             </ul>
         </nav>
+        <div class="title">
+            <div class="logo">
+                <img src="{{ url_for('static', filename='img/logo.png') }}" width="120" height="120" class="logo" />
+            </div>
+            <h1>Medve-Botch</h1>
+        </div>
     </header>
 
     <section class="jokes-list">
