--- a/templates/profile.html
+++ b/templates/profile.html
@@ -13,23 +13,24 @@
 </head>
 
 <header>
+    <nav class="perm-header">
+        <ul>
+            <li><a href="{{ url_for('home') }}">Home</a></li>
+            {% if current_user.is_authenticated %}
+            <li><a href="{{ url_for('logout') }}">Logout</a></li>
+            <li><a href="{{ url_for('submit_joke') }}">Submit Joke</a></li>
+            <li><a href="{{ url_for('profile') }}">Profile</a></li>
+            {% else %}
+            <li><a href="{{ url_for('login') }}">Login</a></li>
+            <li><a href="{{ url_for('register') }}">Register</a></li>
+            {% endif %}
+            <!DOCTYPE html>
+        </ul>
+    </nav>
     <div class="title">
         <div class="logo">
             <img src="{{ url_for('static', filename='img/logo.png') }}" width="120" height="120" class="logo" />
         </div>
         <h1>Medve-Botch</h1>
     </div>
-    <nav>
-        <ul>
-            <li><a href="{{ url_for('home') }}">Home</a></li>
-            {% if current_user.is_authenticated %}
-                <li><a href="{{ url_for('logout') }}">Logout</a></li>
-                <li><a href="{{ url_for('submit_joke') }}">Submit Joke</a></li>
-                <li><a href="{{ url_for('profile') }}">Profile</a></li>
-            {% else %}
-                <li><a href="{{ url_for('login') }}">Login</a></li>
-                <li><a href="{{ url_for('register') }}">Register</a></li>
-            {% endif %}<!DOCTYPE html>
-        </ul>
-    </nav>
 </header>
