--- a/static/css/jokes.css
+++ b/static/css/jokes.css
@@ -12,20 +12,22 @@
 
 .joke-actions {
     margin-top: 10px;
-    display: flex;
+    display:flex;
     gap: 15px;
 }
 
-.jokes-container {
+.joke-box {
     display: flex;
     flex-direction: column;
     /* Arrange jokes vertically */
-    gap: 15px;
+    margin: 30px;
+    margin-left:20%;
+    margin-right:20%;
     /* Space between joke boxes */
 }
 
 .joke-box {
-    background-color: #ffffff;
+    background-color: rgb(246,255,173);
     border: 1px solid #cccccc;
     border-radius: 8px;
     padding: 15px;
@@ -35,15 +37,18 @@
 }
 
 .joke-header {
+    font-family: 'Caveat';
+    font-size:x-large;
     align-items: left;
-    font-size: 1.2em;
     /* Slightly larger font for category */
-    margin-bottom: 10px;
     /* Space between header and content */
 }
 
 .joke-content {
+    font-family: 'Caveat';
+    font-size:x-large;
     margin-bottom: 20px;
+    display:flex;
     /* Space between content and footer */
 }
 
