header buttons now alligned vertically

--- a/templates/login.html
+++ b/templates/login.html
@@ -24,7 +24,7 @@
     <a>
         <div class="topBox">
             <div class="logoCircle">
-                <img src="{{ url_for('static', filename='img/logo.png') }}" width="30" height="30" class="logo" />
+                <img src="{{ url_for('static', filename='img/logo.png') }}" width="30" height="30" class="minilogo" />
             </div>
         </div>
         <div class="backBox"></div>
