--- a/static/css/main.css
+++ b/static/css/main.css
@@ -18,7 +18,7 @@ header {
     align-items: top right;
     text-align: right;
     background-color: rgb(255,233,127);
-    padding:1em;
+    padding:12px;
     padding-left:0;
     margin-top:0;
     position: fixed;
@@ -52,7 +52,7 @@ nav ul {
 }
 
 nav ul li {
-    display: inline;
+    text-align: center;
     margin-right: 15px;
 }
 
