--- a/static/css/jokes.css
+++ b/static/css/jokes.css
@@ -14,16 +14,8 @@
     margin-top: 10px;
     display:flex;
     gap: 15px;
-}
-
-.joke-box {
-    display: flex;
-    flex-direction: column;
-    /* Arrange jokes vertically */
-    margin: 30px;
-    margin-left:20%;
-    margin-right:20%;
-    /* Space between joke boxes */
+    position: absolute;
+    right:2em;
 }
 
 .joke-box {
@@ -34,6 +26,13 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     position: relative;
     /* Positioning for footer buttons */
+    display: flex;
+    flex-direction: column;
+    /* Arrange jokes vertically */
+    margin: 30px;
+    margin-left:20%;
+    margin-right:20%;
+    /* Space between joke boxes */
 }
 
 .joke-header {
@@ -47,25 +46,25 @@
 .joke-content {
     font-family: 'Caveat';
     font-size:x-large;
-    margin-bottom: 20px;
-    display:flex;
+    padding-right:100px;
+    margin-bottom:0;
     /* Space between content and footer */
 }
 
 .joke-footer {
-    display: flex;
-    justify-content: space-between;
-    /* Space between buttons */
-    position: absolute;
+    position:absolute;
     /* Positioning at bottom right */
-    bottom: 15px;
+    bottom: 10px;
     /* Adjust according to the padding */
     right: 15px;
     /* Adjust according to the padding */
+    margin-top:5px;
+    margin-bottom:0;
+    height:35px;
 }
 
-.rate-btn,
-.react-btn {
+.like-btn,
+.dislike-btn {
     background-color: #35424a;
     color: white;
     border: none;
@@ -74,8 +73,8 @@
     cursor: pointer;
 }
 
-.rate-btn:hover,
-.react-btn:hover {
+.like-btn,
+.dislike-btn {
     background-color: #2c3e50;
     /* Darker shade on hover */
 }
