--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
                 <p>Rating: {{ joke.rating }}</p> <!-- Assuming rating reflects the total likes -->
                 {% for user in users %}
                 {% if user.id == joke.user_id %}
-                    <p>User: {{ user.name }}</p>
+                    <p>User: <a href="{{ url_for('profile') }}">{{ user.name }}</a></p>
                 {% endif %}
                 {% endfor %}
             </div>
