added github and trello links to the top right of the site

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,6 +14,11 @@ header {
     height:144px;
 }
 
+.contacts{
+    margin-right:80px;
+    padding-top:10px;
+}
+
 .perm-header {
     background-color: rgb(255,233,127);
     position: fixed;
