--- a/templates/profile.html
+++ b/templates/profile.html
@@ -40,6 +40,10 @@
         </div>
         <h1>Medve-Botch</h1>
     </div>
+    <div class="contacts">
+        <a href="https://github.com/KolozsiZsombor/SzoftverModszerMiniProject"><img src="{{ url_for('static', filename='img/github.png') }}" alt="GitHub" title="GitHub" width="40" height="40" class="github"/></a>
+        <a href="https://trello.com/b/fzeVdeYr/szoftvermodszer"><img src="{{ url_for('static', filename='img/trello.png') }}" alt="Trello" title="Trello" width="40" height="40" class="trello"/></a>
+    </div>
 </header>
 
 <body>
