--- a/static/css/jokes.css
+++ b/static/css/jokes.css
@@ -1,26 +1,18 @@
 .jokes-list {
-    padding:20px;
-}
-
-.joke-item {
-    background-color: rgb(246,255,173);
-    margin: 20px;
     padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .joke-actions {
     margin-top: 10px;
-    display:flex;
+    display: flex;
     gap: 15px;
     position: absolute;
-    right:2em;
+    right: 2em;
 }
 
 .joke-box {
-    background-color: rgb(246,255,173);
-    border: 1px solid #cccccc;
+    background-color: #264941;
+    border: 4px solid rgb(102,57,23);
     border-radius: 8px;
     padding: 15px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -30,37 +22,43 @@
     flex-direction: column;
     /* Arrange jokes vertically */
     margin: 30px;
-    margin-left:30%;
-    margin-right:30%;
+    margin-left: 30%;
+    margin-right: 30%;
     /* Space between joke boxes */
+    background-image: url(../img/U0JifTl.png);
+    background-position: center;
+    background-size: 120% 120%;
+    background-repeat: no-repeat;
 }
 
 .joke-header {
     font-family: 'Caveat';
-    font-size:x-large;
+    font-size: x-large;
     align-items: left;
+    color: #f5f3ef;
     /* Slightly larger font for category */
     /* Space between header and content */
 }
 
 .joke-content {
     font-family: 'Caveat';
-    font-size:x-large;
-    padding-right:100px;
-    margin-bottom:0;
+    font-size: x-large;
+    color: #f5f3ef;
+    padding-right: 100px;
+    margin-bottom: 0;
     /* Space between content and footer */
 }
 
 .joke-footer {
-    position:absolute;
+    position: absolute;
     /* Positioning at bottom right */
     bottom: 10px;
     /* Adjust according to the padding */
     right: 15px;
     /* Adjust according to the padding */
-    margin-top:5px;
-    margin-bottom:0;
-    height:35px;
+    margin-top: 5px;
+    margin-bottom: 0;
+    height: 35px;
 }
 
 .like-btn,
