--- a/static/css/register,login.css
+++ b/static/css/register,login.css
@@ -18,7 +18,7 @@ body {
 .backBox {
     width: 100%;
     min-height: 8em;
-    background-color: #cc9900;
+    background-color: rgb(255,233,127);
     background-clip: border-box;
     position: absolute;
     padding-top: 0em;
@@ -29,7 +29,7 @@ body {
 
 .backBox {
     height: 100%;
-    background-color: #ededed;
+    background-color: #fff4bf;
     z-index: -2;
 }
 
@@ -69,7 +69,7 @@ h5 {
     position: relative;
     top: 1em;
     padding-bottom: 0px;
-    color: #f5f5f5;
+    color: rgb(102,57,23);
 }
 
 .form {
