--- a/static/css/jokes.css
+++ b/static/css/jokes.css
@@ -52,13 +52,20 @@
 .joke-footer {
     position: absolute;
     /* Positioning at bottom right */
-    bottom: 10px;
+    bottom: 20px;
     /* Adjust according to the padding */
     right: 15px;
     /* Adjust according to the padding */
-    margin-top: 5px;
-    margin-bottom: 0;
-    height: 35px;
+    margin:0;
+    height: 20px;
+}
+
+.like-dislike {
+    text-align:center;
+}
+
+.rating {
+    margin: 10px;
 }
 
 .like-btn,
@@ -71,8 +78,8 @@
     cursor: pointer;
 }
 
-.like-btn,
-.dislike-btn {
+.like-btn:hover,
+.dislike-btn:hover {
     background-color: #2c3e50;
     /* Darker shade on hover */
 }
