--- a/static/css/jokes.css
+++ b/static/css/jokes.css
@@ -70,16 +70,13 @@
 
 .like-btn,
 .dislike-btn {
-    background-color: #35424a;
-    color: white;
     border: none;
-    padding: 8px 12px;
-    border-radius: 5px;
-    cursor: pointer;
+    background: none;
+    margin:0;
+    padding:0;
 }
 
 .like-btn:hover,
 .dislike-btn:hover {
-    background-color: #2c3e50;
-    /* Darker shade on hover */
+    background: none;
 }
