--- a/static/css/submit_joke.css
+++ b/static/css/submit_joke.css
@@ -13,15 +13,15 @@ body {
 
 .header {
     background-clip: border-box;
-    background-color: #663366;
+    background-color: #ffe97f;
     display: inline;
     position: fixed;
     height: fit-content;
     width: fit-content;
     right: 0;
     top: 0;
-    border-left: 2px solid #663366;
-    border-bottom: 2px solid #663366;
+    border-left: 2px solid #ffe97f;
+    border-bottom: 2px solid #ffe97f;
     border-bottom-left-radius: 10px;
     z-index: 1;
 }
@@ -69,7 +69,7 @@ button[type=submit]:hover {
 
 h1 {
     position: relative;
-    color: white;
+    color: rgb(102,57,23);
 }
 
 label {
@@ -83,7 +83,6 @@ label {
     margin-left: auto;
     margin-right: auto;
     margin-top: 5px;
-    filter: invert(100%);
     margin-bottom: 5px;
 }
 
@@ -111,11 +110,12 @@ label {
     padding-top: 0em;
     display: flex;
     justify-content: center;
-    background-color: #ededed;
+    background-color: #fff4bf;
+    ;
     z-index: -2;
 }
 
 .topBox {
-    background-color: #cc9900;
+    background-color: #ffe97f;
     height: 5em;
 }
